Add optional java arguments